# HiCMatrix

./: .travis.yml  HiCMatrix_env_ci.yml  README.md  README.rst  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml  python-publish.yml  test.yml
hicmatrix/: HiCMatrix.py  __init__.py  _version.py  hicmatrix_extension.pyx  utilities.py
hicmatrix/lib/: cool.py  ginteractions.py  h5.py  hicpro.py  homer.py  matrixFile.py  matrixFileHandler.py  scool.py
hicmatrix/lib_cpp/: hic_matrix_extension.cpp
hicmatrix/test/: test_HiCMatrix.py  test_matrixFileHandler.py
hicmatrix/test/test_data/: GSE63525_GM12878_insitu_primary_2_5mb_hic2cool042.cool  GSE63525_GM12878_insitu_primary_2_5mb_hic2cool051.cool  one_interaction_diag_4chr.cool  test_matrix.homer
